Sat Sep 04 12:35:12 BST 2004  Olly Betts <olly@survex.com>

	* HACKING: Updated details of which autotools we require.

Fri Sep 03 17:51:59 BST 2004  Olly Betts <olly@survex.com>

	* configure.ac: Require autoconf 2.59.  Noted LIBRARY_VERSION_INFO
	  which 0.8.2 will probably have.
	* Makefile.am: Require automake 1.8.5.

Fri Sep 03 16:40:11 BST 2004  Olly Betts <olly@survex.com>

	* PLATFORMS: Updated with results from tinderbox.

Fri Sep 03 14:34:00 BST 2004  Olly Betts <olly@survex.com>

	* autoconf/definedir.m4,autoconf/rjb_find_stlport.m4: Quote macro
	  names to fix warning from newer aclocal.  Removed comments about
	  future autodetection of stlport, as the user will always need to
	  decide between the STL supplied with the compiler and stlport.

Thu Sep 02 17:55:33 BST 2004  Olly Betts <olly@survex.com>

	* matcher/andpostlist.cc: Initialise lmax and rmax to 0.  Hopefully
	  this will fix SIGFPE on apitest's qterminfo2 on alpha linux.

Thu Sep 02 14:50:20 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_database.cc: Not storing the document length
	  and last docid on every add means that the magic key won't always
	  exists when there are records and
	  QuartzWritableDatabase::get_doccount() is sometimes off by one.  Fix
	  crudely for now by making sure that the magic key does always exist.
	  Longer term the magic key probably should be in the postlist table
	  but that's an incompatible change.

Wed Sep 01 16:15:23 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/: Change QuartzWritableDatabase to store the total
	  document length and the last docid itself rather than talling added
	  and removed document length and writing the last docid back every
	  time a document is added.  This gives cleaner code and a small
	  performance win.  Removed XAPIAN_FLUSH_THRESHOLD_LENGTH as we no
	  longer tally the length changes, and made the default flush
	  threshold 10000 documents (was 1000).
