@@ -1,3 +1,8 @@
+Sun Sep 05 01:33:16 BST 2004  Olly Betts <olly@survex.com>
+
+	* tests/quartztest.cc: Cleaned up rather odd code which is a hangover
+	  from when keys and tags weren't simply C++ strings.
+
 Sat Sep 04 12:35:12 BST 2004  Olly Betts <olly@survex.com>
 
 	* HACKING: Updated details of which autotools we require.
